Fix: Overflowing elements

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
 	color: red;
+	box-sizing: border-box;
 }
 
 .outer {
@@ -26,7 +27,6 @@
 
 #main-input {
 	width: 100%;
-	max-width: 400px;
 	padding: 0.75rem 1rem;
 	font-size: 1rem;
 	border: 2px solid #ccc;
@@ -52,6 +52,5 @@
 }
 
 .shortcuts>a>img {
-	height: 0.5rem;
-	max-width: 0.75rem;
+	max-height: 1rem;
 }
